# fullstack-ai-course

./: .gitignore  README.md  fullstack-ai-course.code-workspace
data-managment/: data_managment.ipynb  pyproject.toml
mlflow-demo/: admin.py  basics.py  pipeline-request.py  pipeline-run.py  pipeline.py  pyproject.toml  run-server.sh  serve.sh
multimodal-chat/: pyproject.toml
multimodal-chat/app/: image_utils.py  llm_client.py  main.py  ollama_client.py  tools.py
project-template/: project-template.code-workspace
project-template/backend/: api.py  pyproject.toml  run.sh
project-template/backend/models/iris-model/sklearn/: model.pk
project-template/frontend/: home.py  pyproject.toml  run.sh
project-template/frontend/pages/: about_us.py
project-template/models/: flowers-model.ipynb  iris-model.ipynb  pyproject.toml
project-template/models/iris-model/keras/: model.keras
