[project]
name = "models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "tensorflow>=2.18.0",
    "tensorflow-datasets>=4.9.7",
    "tensorflow-metal>=1.2.0",
]
